Fix frontpage-panel visibility issue.

--- a/app/component/front-page.scss
+++ b/app/component/front-page.scss
@@ -158,7 +158,7 @@ $heading-color: #858585;
     display: flex;
     flex-direction: column;
     padding-bottom: $border-radius-bigger;
-    overflow: hidden;
+    //overflow: hidden;
     background: #eef1f3;
     border-bottom-right-radius: $border-radius-bigger;
     border-bottom-left-radius: $border-radius-bigger;
